terminando página true detective e adicionando breaking bad

--- a/TheSopranos.html
+++ b/TheSopranos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>The Sopranos</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -12,7 +12,7 @@
 <header>
     <header class="logo">
         <picture>
-            <img src="imgLogo/Logo.jpg" alt="logo" width="190" >
+            <img src="imgLogo/store_banner_image.jpeg" alt="logo" width="2000" height="150">
         </picture>
         <footer class="bar">
             
@@ -24,6 +24,7 @@
         <h2>Series TV</h2>
         <ul>
             <li><a href="TrueDetective.html" target="_self">TrueDetective</a></li>
+            <li><a href="BreakingBad.html" target="_self">Breaking Bad</a></li>
         </ul>
     </nav>
     <article class="main">
