--- a/TheSopranos.html
+++ b/TheSopranos.html
@@ -15,7 +15,7 @@
             <img src="imgLogo/store_banner_image.jpeg" alt="logo" width="2000" height="150">
         </picture>
         <footer class="bar">
-            
+            <a href="index.html" target="_self">#página principal</a>
         </footer>
     </header>
 </header>
