adicionando a tag figcaption nos trailers

--- a/TheSopranos.html
+++ b/TheSopranos.html
@@ -31,6 +31,7 @@
         <h1 id="inicio">The Sopranos</h1>
         <figure>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mJpNmYeooQE?si=fUrbk81Pgn9Kt_Zn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <figcaption>Abertura The Sopranos</figcaption>
         </figure>
 
         <section id="sinopse">
