--- a/BreakingBad.html
+++ b/BreakingBad.html
@@ -31,6 +31,7 @@
         <h1 id="inicio">Breaking Bad</h1>
         <figure>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/HhesaQXLuRY?si=xwnq_5kHY1QK0do1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <figcaption>Trailer Breaking Bad</figcaption>
         </figure>
 
         <section id="sinopse">
